Fix layout issue and add container for name in index.html, adjust avatar size in style.css

--- a/style.css
+++ b/style.css
@@ -29,11 +29,22 @@ body {
     border-radius: 3px;
     box-shadow: -3px 3px 0px var(--main-color);
   }
+
   .avatar-box {
     border: solid 2px black;
     border-radius: 3px;
     box-shadow: -3px 3px 0px var(--main-color);
-
+    /* height: 400px; */
+    box-sizing: border-box;
+  }
+  
+  #avatar {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: fill;
+    box-sizing: border-box;
   }
 
   .progress-bar {
